# frame

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml  Imager.sln
backend/Imager/: Imager.csproj  Program.cs  appsettings.json
backend/Imager.Api/: Imager.Api.csproj  Program.cs  appsettings.Development.json  appsettings.json
backend/Imager.Api/Common/: ImagerOptions.cs  JsonContext.cs
backend/Imager.Api/Endpoints/: DeleteImageEndpoint.cs  GetImagesEndpoint.cs  UpdateInkyEndpoint.cs  UploadImageEndpoint.cs
backend/Imager.Api/Properties/: launchSettings.json
backend/Imager.Api/Responses/: ImageResponse.cs  ImageUploadResponse.cs
backend/Imager.Api/Validation/: FileTypeMapping.cs  ImageValidation.cs  SupportedFileType.cs
backend/Imager.Application/Services/: ImageService.cs
backend/Imager/Common/: ImagerOptions.cs  JsonContext.cs
backend/Imager/Endpoints/: DeleteImageEndpoint.cs  GetImagesEndpoint.cs  UploadImageEndpoint.cs
backend/Imager/Responses/: ImageResponse.cs  ImageUploadResponse.cs
backend/src/: activity_monitor.rs  router.rs
frame/: Cargo.toml
frame/src/: inky.rs  main.rs
imagerui/: .cta.json  .env.example  index.html  package-lock.json  package.json
imagerui/src/apis/: api.ts  types.ts
imagerui/src/components/: Footbar.tsx  ImageGrid.tsx  ImageGridSkeleton.tsx  ImageUpload.tsx  Navbar.tsx
imagerui/src/components/shared/: Aurora.css  (+1 more)
imagerui/src/routes/: __root.tsx  index.tsx
scripts/: install.sh
scripts/services/: frame.service  imager.service
src/: inky.rs  main.rs
src/server/: handlers.rs  mod.rs  router.rs
